syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc TestRequestReply (HelloRequest) returns (HelloReply);
  rpc TestServerStreaming (HelloRequest) returns (stream HelloReply);
  rpc TestClientStreaming (stream HelloRequest) returns (HelloReply);
  rpc TestClientServerStreaming (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}